# rfastspeech

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml
.github/workflows/: rust.yml
crates/rfastspeech/: Cargo.toml
crates/rfastspeech-audio/: Cargo.toml
crates/rfastspeech-audio/src/: lib.rs  wav.rs
crates/rfastspeech-core/: Cargo.toml
crates/rfastspeech-core/src/: error.rs  lib.rs  util.rs
crates/rfastspeech-import/: Cargo.toml
crates/rfastspeech-import/src/: lib.rs  safetensors.rs
crates/rfastspeech-import/src/huggingface/: mod.rs  safetensors.rs
crates/rfastspeech-import/src/huggingface/dummy_model/: config.json  model.safetensors
models/: Cargo.toml  convert.rs
