[workspace]
resolver = "2"

members = ["crates/*", "models"]

[workspace.package]
authors = ["Krzysztof Tyburski <krzysztof.tyb@gmail.com>"]
description = "Fast speech toolkit in Rust"
categories = ["speech"]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = { version = "1.0.57" }
burn = { version = "0.12.1" }
safetensors = { version = "0.4.2" }
memmap2 = { version = "0.9.4", features = ["stable_deref_trait"] }
yoke = { version = "0.7.3", features = ["derive"] }
