[package]
name = "rfastspeech-import"
description = "Importing models for rfastspeech toolkit"
authors.workspace = true
categories.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
safetensors.workspace = true
memmap2.workspace = true
yoke.workspace = true
serde_json.workspace = true
rfastspeech-core = { path = "../rfastspeech-core" }

[dev-dependencies]
test-log.workspace = true
